# mlops-2025

./: README.md  metrics.json  pyproject.toml  questions.txt  random_forest.json  xgboost.json
models/: model.pkl  random_forest_model.pkl  xgboost_model.pkl
notebooks/: titanic-survival.ipynb
scripts/: LogisticRegression.py  base_model_interface.py  evaluate.py  feature_engineering.py  featurize.py  featurize_interface.py  models.py  predict.py  preprocessing.py  preprocessing_interface.py  random_forest_model.py  run_logistic_regression.sh  run_models.sh  run_pipeline.sh  xgboost_model.py
transformers/: bins_transformer.pkl  num_cat_transformer.pkl
